# s3_cli

./: Cargo.toml  README.md
src/: main.rs
src/commands/: download.rs  list.rs  mod.rs
