[package]
name = "s3"
version = "0.1.0"
authors = ["ksk001100 <hm.pudding0715@gmail.com>"]
edition = "2018"
description = "AWS S3 CLI tools"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusoto_core = "0.44.0"
rusoto_s3 = "0.44.0"
seahorse = "1.0.0"
tokio = { version = "0.2", features = ["full"] }